1.1.1 / 2012-12-03

* Bug fixes

  * Removed inadvertent dependency on ActiveSupport - thanks @thbar! https://github.com/seamusabshere/upsert/issues/10

1.1.0 / 2012-11-26

* Enhancements

  * Works on JRuby using bare-metal JDBC!
  * Simplified.

1.0.2 / 2012-11-12

* Bug fixes

  * Fix filenames - they were updated on an apparently case-insensitive setup. Thanks @ihough! (https://github.com/seamusabshere/upsert/pull/8)
  * Deliberately drop MySQL procedures before creating them. Also thanks to @ihough!

1.0.1 / 2012-11-07

* Bug fixes

  * Fix incorrect gem description

1.0.0 / 2012-11-07

* Breaking changes (well, not really)

  * Not using INSERT ... ON DUPLICATE KEY UPDATE for MySQL!

* Enhancements

  * Replaced ON DUPLICATE KEY with a true merge function (procedure)
  * Simplified code - buffering is no longer used anywhere
  * Clarified documentation

* Bug fixes

  * MySQL upserts won't fail if you have a multi-key selector and no multi-column UNIQUE index to cover them (https://github.com/seamusabshere/upsert/issues/6)

0.5.0 / 2012-09-21

* Breaking changes (well, not really)

  * "document" (as in the second argument to #row) has been renamed to "setter"!

* Bug fixes

  * If you say upsert({:name => 'Jerry', :color => 'red'}), make sure that it only affects rows really meeting those conditions
  * Always sort selector and setter keys - i.e., column names - before doing anything with them
  * Support PostgreSQL 9.1+
  * Support MRI 1.8

* Enhancements

  * Slightly faster benchmarks for SQlite3 and MySQL
  * Slightly slower on PostgreSQL (probably because the merge function requires more arguments), but more accurate
  * Slightly clearer code structure
  * Use bind parameters instead of quoting for PostgreSQL and SQLite3.
  * Provide Upsert.clear_database_functions(connection) (currently only for PostgreSQL)
  * Don't subclass String for Upset::Binary... hopefully save some strcpy()s?

0.4.0 / 2012-09-04

* Bug fixes
