@@ -2,6 +2,8 @@ class Upsert
   class Connection
     # @private
     class PG_Connection < Connection
+      include Postgresql
+      
       def execute(sql, params = nil)
         if params
           Upsert.logger.debug { %{[upsert] #{sql} with #{params.inspect}} }
