@@ -1,3 +1,9 @@
+unreleased
+
+* Enhancements
+
+  * Support for PostgreSQL's HStore
+
 1.1.1 / 2012-12-03
 
 * Bug fixes
